--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -68,6 +68,15 @@
 
 
 
+// Breadcrumbs: para que no se baje todo el bloque
+.page-breadcrumb ul li {
+	max-width: 450px;
+	text-align: left;
+}
+
+
+
+
 
 
 
@@ -923,39 +932,40 @@ body.page-1er-congreso-internacional-educacion-e-inclusion-desde-el-sur {
 
 		 }
 	}
+}
 
-	.profesionales-videos {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
+.videos-thumbnails-list {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	
+	video {
+		width: 80%;
+		height: auto;
+		min-width: 300px;
+	}
+	
+	.item {
+		max-width: 300px;
+		margin: 0.8em;
+		position: relative;
 		
-		video {
-			width: 80%;
-			height: auto;
-			min-width: 300px;
+		&:hover {
+			opacity: 0.7;
 		}
 		
-		a {
-			max-width: 300px;
-			margin: 0.8em;
-			position: relative;
-			
-			&:hover {
-				opacity: 0.7;
-			}
-			
-			&::after {
-				content:"";
-				background: url(../js/mediaelement/bigplay.png) top center no-repeat;
-				width: 100%;
-				height: 100px;
-				position: absolute;
-				top: 40px;
-			}
+		&::after {
+			content:"";
+			background: url(../js/mediaelement/bigplay.png) top center no-repeat;
+			width: 100%;
+			height: 100px;
+			position: absolute;
+			top: 40px;
 		}
 	}
-
 }
+
+	
 
 
 body.page-espacio-tecnologico {
