--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -876,6 +876,30 @@ table.dataTable thead .sorting_asc:after {
   margin-bottom: 3em;
 }
 
+#map_puntos_carga .leaflet-top {
+  z-index: 500;
+}
+
+#map_puntos_carga .leaflet-popup-content p {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin: 0;
+}
+
+#map_puntos_carga .leaflet-popup-content dt,
+#map_puntos_carga .leaflet-popup-content dd {
+  display: inline-block;
+  margin: 0;
+}
+
+#map_puntos_carga .leaflet-popup-content dt {
+  font-weight: bold;
+}
+
+#map_puntos_carga .leaflet-popup-content dd {
+  margin-left: 0.3em;
+}
+
 .effect-enlarge-shadow:hover {
   -webkit-transform: scale(1.015);
   -ms-transform: scale(1.015);
