--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -75,6 +75,19 @@
 }
 
 
+.module_add_shortcode .fake-text-bajada-style .text {
+	font-size: 28px;
+	line-height: 36px;
+	font-weight: 400;
+	text-align: left;
+	margin: 0 0 40px 0;
+	padding: 0px;
+}
+
+
+
+
+
 
 
 
