--- a/themes/mrg/css/sass/_mrg-fixes.scss
+++ b/themes/mrg/css/sass/_mrg-fixes.scss
@@ -837,6 +837,7 @@ body.post-type-archive-centros_salud {
 			padding-bottom: 1em;
 			border-radius: 0 0 10px 10px;
 			text-align: center;
+			word-break: break-word;
 		}	
 
 		
