--- a/themes/mrg/css/sass/main.scss
+++ b/themes/mrg/css/sass/main.scss
@@ -28,3 +28,4 @@ $font-awesome-brands: "Font Awesome 5 Brands";
 @import "_mrg-fixes";
 @import "_mini-article";
 @import "_blog-latest";
+@import "_mrg-print";
