--- a/themes/mrg/css/fixes.css
+++ b/themes/mrg/css/fixes.css
@@ -1,13 +1,15 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800");
 .visually-hide {
-  position: absolute;
+  position: absolute !important;
   display: inline-block;
   width: 1px;
   height: 1px;
   overflow: hidden;
   color: transparent;
   background: transparent;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
 }
 
 .smaller-font {
